--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,7 +1,11 @@
-
-.proj{
-    width:250px;
-    height:270px;
-    border:2px solid black;
-    border-radius: 5px;
+.proj {
+  width: 250px;
+  height: 270px;
+  border: 2px solid black;
+  border-radius: 5px;
+}
+header {
+  background-color: aqua;
+  width: 100%;
+  height: 200px;
 }
