--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,11 +1,38 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+p.title {
+  font-size: 40px;
+  font-weight: bold;
+  padding-top: 60px;
+  padding-left: 40px;
+}
+.me {
+  font-size: 22px;
+  font-weight: bold;
+  padding: 30px;
+}
+.intro {
+  margin-top: 80px;
+  background-color: aqua;
+  width: 100%;
+  height: 200px;
+}
+.intro img {
+  background-color: blueviolet;
+  display: block;
+  width: 250px;
+  height: 250px;
+  float: right;
+  margin-right: 50px;
+  margin-top: -25px;
+  border-radius: 30px;
+}
 .proj {
   width: 250px;
   height: 270px;
   border: 2px solid black;
   border-radius: 5px;
-}
-header {
-  background-color: aqua;
-  width: 100%;
-  height: 200px;
 }
