--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3,6 +3,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+a {
+  display: block;
+  text-decoration: none;
+  color: #000;
+}
 p.title {
   font-size: 40px;
   font-weight: bold;
@@ -14,32 +19,57 @@ p.title {
   font-weight: bold;
   padding: 30px;
 }
-.intro {
+#intro {
   margin-top: 80px;
-  background-color: #7579e7;
+  background-color: #8d93ab;
   width: 100%;
   height: 200px;
 }
-.intro img {
-  background-color: #9ab3f5;
+#intro img {
+  background-color: #f1f3f8;
   display: block;
-  width: 250px;
-  height: 250px;
+  width: 25%;
+  height: 300px;
   float: right;
   margin-right: 50px;
-  margin-top: -25px;
+  margin-top: -50px;
   border-radius: 30px;
 }
 .proj {
-  width: 250px;
-  height: 270px;
+  margin-top: 30px;
+  background-color: #f1f3f8;
+  width: 19%;
+  height: 350px;
   border: 2px solid black;
   border-radius: 5px;
   float: left;
   margin-left: 25px;
 }
-.talent {
-  margin: 30px;
+.proj_name {
+  font-size: 1.7em;
+  font-weight: bold;
+  padding-left: 10px;
+}
+.proj img {
+  width: 100%;
+  border-radius: 5px;
+  height: 200px;
+}
+.proj:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.quick {
+  position: fixed;
+  top: 50%;
+  right: 25px;
+  z-index: 10;
+  width: 50px;
+  margin-top: -135px;
+  text-align: center;
+}
+/* .talent { */
+/* margin: 30px;
   position: relative;
 }
 .talent img {
@@ -79,4 +109,4 @@ p.title {
   position: absolute;
   left: 130px;
   top: 345px;
-}
+} */ ;
