--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -3,6 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+ul {
+  list-style: none;
+}
+li {
+  font-weight: 900;
+  width: 90px;
+  padding: 10px;
+  margin-right: 30px;
+}
 a {
   display: block;
   text-decoration: none;
@@ -62,7 +71,7 @@ p.title {
 .quick {
   position: fixed;
   top: 50%;
-  right: 25px;
+  right: 50px;
   z-index: 10;
   width: 50px;
   margin-top: -135px;
